# CV_Task_5

./: CMakeLists.txt
src/: main.cpp
